--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>ToDo App</title>
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="todo">
+            <h1>Todo</h1>
+            <p>What do you want to get done today?</p>
+            <form id="form">
+                <input type="text" id="input" placeholder="Enter task" />
+            </form>
+        </div>
+        <div class="listTodo">
+            <ul id="todoList"></ul>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
